Prevent wrap before colon in 'Parameters :' (implements fix from http://projects.scipy.org/numpy/ticket/1903)

--- a/docs/_static/astropy.css
+++ b/docs/_static/astropy.css
@@ -26,3 +26,7 @@ div.figures .figure {
     margin-left: 0.5em;
     margin-right: 0.5em;
 }
+
+.field-list th {
+    white-space: nowrap;
+}
